--- a/index.html
+++ b/index.html
@@ -36,39 +36,15 @@ button:hover { opacity:0.8; }
 .secondary { background:#444; color:#fff; }
 
 /* 預覽容器 */
-#previewContainer {
-  margin-top:20px;
-  text-align:center;
-}
+#previewContainer { margin-top:20px; text-align:center; }
 
 /* 下層固定主圖 */
-#mainPreview {
-  width:200px;
-  height:200px;
-  margin:auto;
-  border:1px solid #ddd;
-  border-radius:12px;
-  overflow:hidden;
-  margin-bottom:10px;
-}
+#mainPreview { width:200px; height:200px; margin:auto; border:1px solid #ddd; border-radius:12px; overflow:hidden; margin-bottom:10px; }
 #mainPreview img { width:100%; height:100%; object-fit:cover; }
 
 /* 上層滑動縮圖 */
-#thumbnailSlider {
-  display:flex;
-  overflow-x:auto;
-  gap:6px;
-  padding:6px 0;
-}
-#thumbnailSlider img {
-  width:60px;
-  height:60px;
-  border-radius:8px;
-  cursor:pointer;
-  flex-shrink:0;
-  border:2px solid transparent;
-  transition: all 0.2s;
-}
+#thumbnailSlider { display:flex; overflow-x:auto; gap:6px; padding:6px 0; }
+#thumbnailSlider img { width:60px; height:60px; border-radius:8px; cursor:pointer; flex-shrink:0; border:2px solid transparent; transition: all 0.2s; }
 #thumbnailSlider img.selected { border-color:#ff8f66; }
 
 #toast {
@@ -150,9 +126,7 @@ button:hover { opacity:0.8; }
   </div>
 
   <!-- 上層滑動縮圖 -->
-  <div id="thumbnailSlider">
-    <!-- 勾選的 yarn 縮圖會動態生成 -->
-  </div>
+  <div id="thumbnailSlider"></div>
 
   <button type="button" class="primary" onclick="addToCart()">加入購物車</button>
 </div>
@@ -179,7 +153,7 @@ function filterYarns(){
   });
 }
 
-// 勾選邏輯
+// checkbox change 監聽
 document.querySelectorAll(".yarn input").forEach(inp=>{
   inp.addEventListener("change", ()=>{
     if(inp.checked && selectionOrder.length>=6){
@@ -187,19 +161,13 @@ document.querySelectorAll(".yarn input").forEach(inp=>{
       showToast("最多只能選6組線材");
       return;
     }
-    const idx = selectionOrder.indexOf(inp.value);
-    if(inp.checked && idx===-1){
-      selectionOrder.push(inp.value);
-    } else if(!inp.checked && idx>-1){
-      selectionOrder.splice(idx,1);
-    }
-    updateNumberBoxes();
-    updatePreview();
+    selectionOrder = [...document.querySelectorAll(".yarn input:checked")].map(i=>i.value);
+    refreshPreview();
   });
 });
 
-// 更新 number-box
-function updateNumberBoxes(){
+function refreshPreview(){
+  // 更新 number-box 與高亮
   document.querySelectorAll(".yarn input").forEach(i=>{
     const parent = i.closest(".yarn");
     const box = parent.querySelector(".number-box");
@@ -212,38 +180,28 @@ function updateNumberBoxes(){
       parent.classList.remove("selected");
     }
   });
-}
 
-// 更新預覽
-function updatePreview(){
+  // 更新下層主圖
   const mainImg = document.getElementById("mainImage");
-  const slider = document.getElementById("thumbnailSlider");
-  slider.innerHTML = "";
-
-  if(selectionOrder.length === 0){
-    mainImg.src = "images/placeholder.jpg";
-    return;
+  if(selectionOrder.length===0){
+    mainImg.src="images/placeholder.jpg";
+  } else {
+    mainImg.src=`images/${selectionOrder[0]}.jpg`;
   }
 
-  // 下層固定主圖：顯示第一個選中
-  mainImg.src = `images/${selectionOrder[0]}.jpg`;
-  mainImg.onerror = () => mainImg.src = "images/placeholder.jpg";
-
-  // 上層滑動縮圖
+  // 更新上層滑動縮圖
+  const slider = document.getElementById("thumbnailSlider");
+  slider.innerHTML="";
   selectionOrder.forEach(v=>{
     const img = document.createElement("img");
-    img.src = `images/${v}.jpg`;
-    img.alt = v;
+    img.src=`images/${v}.jpg`;
+    img.alt=v;
     img.classList.add("selected");
-    img.onerror = () => img.src="images/placeholder.jpg";
+    img.onerror=()=>img.src="images/placeholder.jpg";
     img.addEventListener("click", ()=>{
-      const idx = selectionOrder.indexOf(v);
-      if(idx>-1){
-        selectionOrder.splice(idx,1);
-        document.querySelector(`.yarn input[value="${v}"]`).checked=false;
-        updateNumberBoxes();
-        updatePreview();
-      }
+      document.querySelector(`.yarn input[value="${v}"]`).checked=false;
+      selectionOrder = [...document.querySelectorAll(".yarn input:checked")].map(i=>i.value);
+      refreshPreview();
     });
     slider.appendChild(img);
   });
@@ -262,10 +220,9 @@ function addToCart(){
   updateCartCount();
 
   // 清空選擇
-  selectionOrder=[];
   document.querySelectorAll(".yarn input").forEach(i=>i.checked=false);
-  updateNumberBoxes();
-  updatePreview();
+  selectionOrder=[];
+  refreshPreview();
 }
 
 // 更新購物車數量
